--- a/Entrega_1.ipynb
+++ b/Entrega_1.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyOGAFJsw1GdFTrQLUI8b76i",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -28,18 +12,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
-        "id": "mQ2263_JQihS",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "mQ2263_JQihS",
         "outputId": "69f584ad-d7d5-49ca-fac8-e8a4f5672bef"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Bienvenido, digite 1 para visualizar informacion\n",
             "2\n",
@@ -63,78 +47,138 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "6GhnoUNmIqlS"
-      },
       "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
       "metadata": {
-        "id": "1EEjTLPPFCHD"
+        "id": "1291XZ6kQmJQ"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
+      "outputs": [],
       "source": [
         "print (\"Bienvenido, digite su nombre\");\n",
         "nombre = input();\n",
         "print(nombre,\",Hola mundo\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1291XZ6kQmJQ",
-        "outputId": "45c68f0f-3966-4c26-e164-af847215fea5"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Bienvenido, digite su nombre\n",
-            "1\n",
-            "1 ,Hola mundo\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print (\"Binvenido, por favor ingrese su altura en metros\");\n",
-        "altura = input();\n",
-        "def calcpeso(altura):\n",
-        "  \n",
-        "  peso =24*altura;\n",
-        "print(\"su peso ideal es:\", peso);\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "HakZB74-dr7U",
-        "outputId": "2e0c5468-bffb-4681-f12a-e134cd5186f5"
+        "outputId": "895a8e73-a146-4ad4-92ec-b5bba7908468"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Ingrese su altura1.60\n",
+            "su peso ideal es: 61.44\n"
+          ]
+        }
+      ],
+      "source": [
+        "\n",
+        "altura = float(input(\"Ingrese su altura\"));\n",
+        "imc=24\n",
+        "peso= altura**2*imc;\n",
+        " \n",
+        "print(\"su peso ideal es:\",round(peso,3));\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jhzJk2FJCZAa",
+        "outputId": "a72f4b06-48bd-4cf3-ea1f-cdaef8b1837c"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "la hora es = 17:50:26\n",
+            "2\n",
+            "hay clase\n"
+          ]
+        }
+      ],
+      "source": [
+        "from datetime import datetime, timedelta\n",
+        "from time import strftime\n",
+        "\n",
+        "hoy             = datetime.now()\n",
+        "hoyMenos5horas = hoy - timedelta(hours=5)\n",
+        "\n",
+        "current_time = hoyMenos5horas.strftime(\"%H:%M:%S\")\n",
+        "print(\"la hora es =\", current_time)\n",
+        "print(hoyMenos5horas.isoweekday())\n",
+        "\n",
+        "dia=hoyMenos5horas.isoweekday()\n",
+        "\n",
+        "if (dia == 2 or dia==4):\n",
+        "  print(\"hay clase\")\n",
+        "else:\n",
+        "  print(\"no hay clase\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_VpMQw5bDCxi",
+        "outputId": "1fb2e839-6ebb-4bde-cc54-060d72198310"
+      },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Binvenido, por favor ingrese su altura en metros\n",
-            "1.60\n",
-            "su peso ideal es: 1.601.601.601.601.601.601.601.601.601.601.601.601.601.601.601.601.601.601.601.601.601.601.601.60\n"
+            "Ingrese la contraseña: 1364\n",
+            "contraseña incorrecta\n",
+            "Ingrese la contraseña: 231345616564\n",
+            "contraseña incorrecta\n",
+            "Ingrese la contraseña: test\n",
+            "ingresó\n"
           ]
         }
+      ],
+      "source": [
+        "contraseña =\"test\"\n",
+        "\n",
+        "while True:\n",
+        "  entrada=input(\"Ingrese la contraseña: \")\n",
+        "  if (contraseña==entrada):\n",
+        "    print(\"ingresó\")\n",
+        "    break\n",
+        "  else:\n",
+        "    print(\"contraseña incorrecta\")"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "provenance": [],
+      "authorship_tag": "ABX9TyNEutgVPhCzQxzKgNABKK6W",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
