--- a/Diccionarios.ipynb
+++ b/Diccionarios.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPfvdXgrA7BKwGcUubraFvS",
+      "authorship_tag": "ABX9TyPaZhm/j4jj/Av45bkQinHC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -174,7 +174,7 @@
         "id": "53UwD8yBniuO",
         "outputId": "60299f49-fa49-4f3b-ffc8-55d35792b537"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,43 +195,55 @@
       "cell_type": "code",
       "source": [
         "clientes= {};\n",
-        "clientepref={};\n",
-        "print(\"Bienvenido a programa para generar listas de clientes\");\n",
-        "print(\"1. Añadir cliente\");\n",
-        "print(\"2. Eliminar cliente\");\n",
-        "print(\"3. Mostrar cliente\");  \n",
-        "print(\"4. Listar todos los clientes\");\n",
-        "print(\"5. clientes preferentes\"); \n",
-        "print(\"6. salir\"); \n",
+        "opcion=\"\";\n",
+        "cliente={};\n",
+        "print(\"1. Agregar usuario\");\n",
+        "print(\"2. Eliminar usuario\");\n",
+        "print(\"3. Mostrar usuario\");\n",
+        "print(\"4. Mostrar usuarios\");\n",
+        "print(\"5. Mostrar usuarios preferntes\");\n",
+        "print(\"6. Salir\");\n",
         "\n",
-        "opcion=input(\"Digite la opcion que desea realizar \")\n",
-        "if opcion==1:\n",
-        "  preferente=bool(\"Es cliente preferente si=1 no = 0\");\n",
-        "  if preferente==1:\n",
-        "   clientes[\"NIF\"]=(\"Digite el nif\");\n",
-        "   clientes[\"nombre\"]=input(\"Digite su nombre\");\n",
-        "   clientes[\"correo\"]=input(\"digite su correo\");\n",
-        "  else:\n",
-        "   clientepref[\"NIF\"] = input(\"digite el nif\");\n",
-        "   clientepref[\"nombre\"]=input(\"digite el nombre\");\n",
-        "   clientepref[\"correo\"]=input(\"digite su correo\");\n",
+        "while opcion!=6:\n",
+        "  opcion=int(input(\"Que desea realizar \"));\n",
+        "  if opcion==1:\n",
+        "    clientes[\"Nif\"]=input(\"Digite el Nif del cliente \");\n",
+        "    clientes[\"nombre\"]=input(\"ingrese el nombre del cliente\");\n",
+        "    clientes[\"direccion\"]=input(\"ingrese la dirección del cliente\");\n",
+        "    clientes[\"telefono\"]=input(\"ingrese el telefono del cliente\");\n",
+        "    val=input(\"escriba 'S' si el usuario es preferente\");\n",
+        "    if val.lower()=='S':\n",
+        "      clientes[\"preferente\"]=True;\n",
+        "    else:\n",
+        "       clientes[\"preferente\"]=False;\n",
+        "      \n",
+        "    cliente[\"cedula\"]=clientes;\n",
+        "  if opcion==2:\n",
+        "    nif=input(\"Digite NIF del cliente\");\n",
+        "    if nif in cliente:\n",
+        "      del clientes[nif];\n",
+        "      print(\"cliente eliminado\");\n",
+        "    else:\n",
+        "      print(\"No encontrado\");\n",
+        "  if opcion==3:\n",
+        "    nif=input(\"introduzca nif del cliente\");\n",
+        "    if nif in cliente:\n",
+        "      for clave, valor in cliente[nif].item():\n",
+        "        print(clave.title() + ':', valor);    \n",
+        "    else:\n",
+        "      print(\"no existe el usuario con NIF\", nif);\n",
+        "  if opcion==4:\n",
+        "    print(\"los clientes son\");\n",
+        "    for clave, valor in cliente.items():\n",
+        "      print(clave, valor);\n",
+        "  if opcion ==5:\n",
+        "    print(\"los clientes preferentes\");        \n",
+        "    for clave, valor in cliente.items():\n",
+        "      if valor[\"preferente\"]==True:\n",
+        "        print(clave, valor);\n",
+        "print(\"hasta pronto\");\n",
         "\n",
-        "if opcion==2:\n",
-        "  NIF=input(\"que nif desea eliminar\");\n",
-        "  if NIF in clientes:\n",
-        "    clientes.popitem(NIF);\n",
-        "  if NIF in clientepref:\n",
-        "    clientepref.popitem(NIF);\n",
-        "if opcion==3:\n",
-        "  nif=input(\"digite el nif\");\n",
-        "  if nif in clientes:\n",
-        "    print(clientes[nif]);\n",
-        "  if nif in clientepref:\n",
-        "    print(clientepref[nif]);\n",
-        "\n",
-        "if opcion==4:\n",
-        "  print(clientes);\n",
-        "  print(clientepref);\n",
+        "  \n",
         "         \n"
       ],
       "metadata": {
@@ -239,22 +251,30 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2eaae9a5-f468-4610-fc0c-e696e5ca0437"
+        "outputId": "32fed3c9-3380-4768-a303-35837a1f04f9"
       },
-      "execution_count": 9,
+      "execution_count": 11,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Bienvenido a programa para generar listas de clientes\n",
-            "1. Añadir cliente\n",
-            "2. Eliminar cliente\n",
-            "3. Mostrar cliente\n",
-            "4. Listar todos los clientes\n",
-            "5. clientes preferentes\n",
-            "6. salir\n",
-            "Digite la opcion que desea realizar 1\n"
+            "1. Agregar usuario\n",
+            "2. Eliminar usuario\n",
+            "3. Mostrar usuario\n",
+            "4. Mostrar usuarios\n",
+            "5. Mostrar usuarios preferntes\n",
+            "6. Salir\n",
+            "Que desea realizar 1\n",
+            "Digite el Nif del cliente 123\n",
+            "ingrese el nombre del clientedsaf\n",
+            "ingrese la dirección del clientefdsa\n",
+            "ingrese el telefono del clientefdsa\n",
+            "escriba 'S' si el usuario es preferentes\n",
+            "Que desea realizar 2\n",
+            "Digite NIF del cliente123\n",
+            "Que desea realizar 6\n",
+            "{'cedula': {'Nif': '123', 'nombre': 'dsaf', 'direccion': 'fdsa', 'telefono': 'fdsa', 'preferente': False}}\n"
           ]
         }
       ]
