--- a/Diccionarios.ipynb
+++ b/Diccionarios.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPaZhm/j4jj/Av45bkQinHC",
+      "authorship_tag": "ABX9TyORqMGNr1b90Wh0kipDNI2d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -208,11 +208,11 @@
         "  opcion=int(input(\"Que desea realizar \"));\n",
         "  if opcion==1:\n",
         "    clientes[\"Nif\"]=input(\"Digite el Nif del cliente \");\n",
-        "    clientes[\"nombre\"]=input(\"ingrese el nombre del cliente\");\n",
-        "    clientes[\"direccion\"]=input(\"ingrese la dirección del cliente\");\n",
-        "    clientes[\"telefono\"]=input(\"ingrese el telefono del cliente\");\n",
-        "    val=input(\"escriba 'S' si el usuario es preferente\");\n",
-        "    if val.lower()=='S':\n",
+        "    clientes[\"nombre\"]=input(\"ingrese el nombre del cliente \");\n",
+        "    clientes[\"direccion\"]=input(\"ingrese la dirección del cliente \");\n",
+        "    clientes[\"telefono\"]=input(\"ingrese el telefono del cliente \");\n",
+        "    val=input(\"escriba 'S' si el usuario es preferente \");\n",
+        "    if val.lower()== \"S\":\n",
         "      clientes[\"preferente\"]=True;\n",
         "    else:\n",
         "       clientes[\"preferente\"]=False;\n",
@@ -221,7 +221,7 @@
         "  if opcion==2:\n",
         "    nif=input(\"Digite NIF del cliente\");\n",
         "    if nif in cliente:\n",
-        "      del clientes[nif];\n",
+        "      del cliente[nif];\n",
         "      print(\"cliente eliminado\");\n",
         "    else:\n",
         "      print(\"No encontrado\");\n",
@@ -236,11 +236,9 @@
         "    print(\"los clientes son\");\n",
         "    for clave, valor in cliente.items():\n",
         "      print(clave, valor);\n",
-        "  if opcion ==5:\n",
-        "    print(\"los clientes preferentes\");        \n",
-        "    for clave, valor in cliente.items():\n",
-        "      if valor[\"preferente\"]==True:\n",
-        "        print(clave, valor);\n",
+        "  if opcion ==5:     \n",
+        "      if [\"preferente\"]==True:\n",
+        "        print(cliente);\n",
         "print(\"hasta pronto\");\n",
         "\n",
         "  \n",
@@ -251,13 +249,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "32fed3c9-3380-4768-a303-35837a1f04f9"
+        "outputId": "16d3b3d1-d828-4bf7-c96d-d3a0cf17e4c4"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "1. Agregar usuario\n",
             "2. Eliminar usuario\n",
@@ -266,15 +264,12 @@
             "5. Mostrar usuarios preferntes\n",
             "6. Salir\n",
             "Que desea realizar 1\n",
-            "Digite el Nif del cliente 123\n",
-            "ingrese el nombre del clientedsaf\n",
-            "ingrese la dirección del clientefdsa\n",
-            "ingrese el telefono del clientefdsa\n",
-            "escriba 'S' si el usuario es preferentes\n",
-            "Que desea realizar 2\n",
-            "Digite NIF del cliente123\n",
-            "Que desea realizar 6\n",
-            "{'cedula': {'Nif': '123', 'nombre': 'dsaf', 'direccion': 'fdsa', 'telefono': 'fdsa', 'preferente': False}}\n"
+            "Digite el Nif del cliente 213\n",
+            "ingrese el nombre del cliente dsaf\n",
+            "ingrese la dirección del cliente sadf\n",
+            "ingrese el telefono del cliente sdaf\n",
+            "escriba 'S' si el usuario es preferente S\n",
+            "Que desea realizar 5\n"
           ]
         }
       ]
