--- a/juegoladrillos.ipynb
+++ b/juegoladrillos.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPajcFfddHG8grRzi2Zbq0D",
+      "authorship_tag": "ABX9TyMhQZs1sqIFK8ptP8vcqc4s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,39 +30,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 321
-        },
-        "id": "yeOfJzLMal06",
-        "outputId": "6fd3a420-e0d8-4bef-d74a-b2e8ce6ca3f7"
+        "id": "yeOfJzLMal06"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: Pygame in /usr/local/lib/python3.7/dist-packages (2.1.2)\n",
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "\u001b[31mERROR: Could not find a version that satisfies the requirement math (from versions: none)\u001b[0m\n",
-            "\u001b[31mERROR: No matching distribution found for math\u001b[0m\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "error",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-7-f6306b9e5509>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    155\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    156\u001b[0m \u001b[0;31m#Creamos una pantalla de 800x600\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 157\u001b[0;31m \u001b[0mpantalla\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_mode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m800\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m600\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    158\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    159\u001b[0m \u001b[0;31m# Establecemos el título de la ventana\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31merror\u001b[0m: No available video device"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "\n",
+        "!pip install pygame\n",
         "import pygame \n",
         "import math\n",
         "\n",
@@ -139,13 +111,13 @@
         "             \n",
         "        \n",
         "        if self.x <= 0:\n",
-        "            self.rumbo = (360 - self.rumbo) % 360\n",
-        "            self.x = 1\n",
+        "            self.rumbo = (360 - self.rumbo) % 360;\n",
+        "            self.x = 1;\n",
         "             \n",
         "        \n",
         "        if self.x > self.largo_screen - self.largo:\n",
-        "            self.rumbo = (360 - self.rumbo) % 360\n",
-        "            self.x = self.largo_screen - self.largo - 1\n",
+        "            self.rumbo = (360 - self.rumbo) % 360;\n",
+        "            self.x = self.largo_screen - self.largo - 1;\n",
         "         \n",
         "        \n",
         "        if self.y > 600:\n",
@@ -167,11 +139,11 @@
         "         \n",
         "       \n",
         "        self.rect = self.image.get_rect()\n",
-        "        self.alto_screen = pygame.display.get_surface().get_height()\n",
-        "        self.largo_screen = pygame.display.get_surface().get_width()\n",
+        "        self.alto_screen = pygame.display.get_surface().get_height();\n",
+        "        self.largo_screen = pygame.display.get_surface().get_width();\n",
         " \n",
         "        self.rect.x = 0\n",
-        "        self.rect.y = self.alto_pantalla-self.alto\n",
+        "        self.rect.y = self.alto_screen-self.alto\n",
         "     \n",
         "    def update(self):\n",
         "        #posicion actualizada\n",
@@ -180,16 +152,16 @@
         "        self.rect.x = pos[0]\n",
         "       \n",
         "        if self.rect.x > self.largo_screen - self.largo:\n",
-        "            self.rect.x = self.largo_pantalla - self.largo\n",
+        "            self.rect.x = self.largo_screen - self.largo\n",
         " \n",
         "\n",
         "pygame.init()\n",
         " \n",
-        "\n",
+        "#pixeles de la pantalla\n",
         "pantalla = pygame.display.set_mode([800, 600])\n",
         " \n",
         "\n",
-        "pygame.display.set_caption('Breakout')\n",
+        "pygame.display.set_caption('Juego')\n",
         " \n",
         "\n",
         "pygame.mouse.set_visible(0)\n",
@@ -201,7 +173,7 @@
         "fondo_pantalla = pygame.Surface(pantalla.get_size())\n",
         " \n",
         "\n",
-        "bloques = pygame.sprite.Group()\n",
+        "ladrillos = pygame.sprite.Group()\n",
         "pelotas = pygame.sprite.Group()\n",
         "todos_los_sprites = pygame.sprite.Group()\n",
         " \n",
@@ -218,17 +190,17 @@
         "top = 80\n",
         " \n",
         "\n",
-        "numero_de_bloques = 32\n",
+        "numero-ladrillos = 32\n",
         " \n",
         "for fila in range(5):\n",
         "   \n",
-        "    for columna in range(0, numero_de_bloques):\n",
+        "    for columna in range(0, numeros-ladrillos):\n",
         "        \n",
-        "        bloque = Bloque(AZUL, columna * (largo_screen + 2) + 1, top)\n",
-        "        bloques.add(bloque)\n",
-        "        todos_los_sprites.add(bloque)\n",
+        "        ladrillo = Ladrillo(azul, columna * (largo_screen + 2) + 1, top)\n",
+        "        ladrillos.add(ladrillo)\n",
+        "        todos_los_sprites.add(ladrillo)\n",
         "    \n",
-        "    top += alto_bloque + 2\n",
+        "    top += alto_ladrillo + 2\n",
         " \n",
         "\n",
         "reloj = pygame.time.Clock()\n",
@@ -246,7 +218,7 @@
         "    reloj.tick(30)\n",
         " \n",
         "    \n",
-        "    pantalla.fill(NEGRO)\n",
+        "    pantalla.fill(negro)\n",
         "     \n",
         "    \n",
         "    for evento in pygame.event.get():\n",
@@ -260,7 +232,7 @@
         "        game_over = pelota.update()\n",
         " \n",
         "    if game_over:\n",
-        "        texto = fuente.render(\"Game Over\", True, BLANCO)\n",
+        "        texto = fuente.render(\"Game Over\", True, blanco)\n",
         "        textopos = texto.get_rect(centerx=fondo_pantalla.get_width()/2)\n",
         "        textopos.top = 300\n",
         "        pantalla.blit(texto, textopos)\n",
@@ -275,10 +247,10 @@
         "        pelota.botar(diff)\n",
         "     \n",
         "    \n",
-        "    bloquesmuertos = pygame.sprite.spritecollide(pelota, bloques, True)\n",
+        "    ladrillosmuertos = pygame.sprite.spritecollide(pelota, ladrillos, True)\n",
         "     \n",
         "    \n",
-        "    if len(bloquesmuertos) > 0:\n",
+        "    if len(ladrillosmuertos) > 0:\n",
         "        pelota.botar(0)\n",
         "         \n",
         "        \n",
